--- a/composer.json
+++ b/composer.json
@@ -27,16 +27,8 @@
     },
     "repositories": [
         {
-            "type": "vcs",
-            "url": "git@github.com:brera/proof-of-concept.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:brera/lib-key-value-store.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:brera/lib-queue.git"
+            "type": "composer",
+            "url": "http://packages.brera.io"
         }
     ],
     "minimum-stability": "dev",
