--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "ext-memcached": ">=1.0",
-        "brera/proof-of-concept": "dev-discussion-import"
+        "brera/proof-of-concept": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
