--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,30 @@
 {
-    "name": "brera/lib-key-value-store-memcached",
-    "description": "Brera Key/Value Store Library For Memcached",
+    "name": "lizards-and-pumpkins/lib-key-value-store-memcached",
+    "description": "Lizards & Pumpkins Key/Value Store Library For Memcached",
     "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Vinai Kopp",
-            "email": "vinai@brera.io"
+            "email": "vinai@lizardsandpumpkins.com"
         },
         {
             "name": "Tim Bezhashvyly",
-            "email": "tim@brera.io"
+            "email": "tim@lizardsandpumpkins.com"
         },
         {
             "name": "Fabian Blechsmidt",
-            "email": "fabian@brera.io"
+            "email": "fabian@lizardsandpumpkins.com"
         }
     ],
     "require": {
         "ext-memcached": ">=1.0",
-        "brera/proof-of-concept": "*"
+        "lizards-and-pumpkins/catalog": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
     },
     "autoload" : {
-        "psr-4": { "Brera\\DataPool\\KeyValue\\Memcached\\": "src/" }
+        "psr-4": { "LizardsAndPumpkins\\DataPool\\KeyValue\\Memcached\\": "src/" }
     },
     "repositories": [
         {
