--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,13 @@
             "url": "https://packages.lizardsandpumpkins.com"
         }
     ],
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit -c tests/Unit/phpunit.xml.dist",
+            "vendor/bin/phpunit -c tests/Integration/phpunit.xml.dist"
+        ],
+        "sniff": "vendor/bin/phpcs --runtime-set ignore_warnings_on_exit true --runtime-set ignore_errors_on_exit true -p --colors --encoding=utf-8 --standard=vendor/lizards-and-pumpkins/coding-standards/src/LizardsAndPumpkins/ src/ tests/"
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
