--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "lizards-and-pumpkins/catalog": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
+        "phpunit/phpunit": "^5.2",
         "lizards-and-pumpkins/coding-standards": "dev-master"
     },
     "autoload" : {
