Issue #4: Limit maximum version of Memcached See https://github.com/sebastianbergmann/phpunit-mock-objects/issues/192, https://github.com/php-memcached-dev/php-memcached/issues/126 and https://github.com/xabbuh/symfony/commit/b64477b0049303270151f8651be65e5775311a62#diff-354f30a63fb0907d4ad57269548329e3R29

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "ext-memcached": ">=1.0",
+        "ext-memcached": ">=1.0 <2.2",
         "lizards-and-pumpkins/catalog": "*"
     },
     "require-dev": {
