--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
         }
     ],
     "require": {
-        "ext-memcached": ">=1.0 <2.2",
-        "lizards-and-pumpkins/catalog": "*"
+        "ext-memcached": ">=1.0 <2.2 || >=3.0.0",
+        "lizards-and-pumpkins/catalog": "0.3.0-alpha"
     },
     "require-dev": {
         "phpunit/phpunit": "5.3.*",
         "lizards-and-pumpkins/coding-standards": "dev-master"
     },
     "autoload" : {
-        "psr-4": { "LizardsAndPumpkins\\DataPool\\KeyValue\\Memcached\\": "src/" }
+        "psr-4": { "LizardsAndPumpkins\\DataPool\\KeyValueStore\\Memcached\\": "src/" }
     },
     "repositories": [
         {
