--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         }
     ],
     "require": {
+        "php": "~5.6.0|~7.0",
         "ext-memcached": ">=1.0 <2.2 || >=3.0.0",
         "lizards-and-pumpkins/catalog": "0.3.0-alpha"
     },
