--- a/composer.json
+++ b/composer.json
@@ -4,22 +4,14 @@
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Vinai Kopp",
-            "email": "vinai@lizardsandpumpkins.com"
-        },
-        {
-            "name": "Tim Bezhashvyly",
-            "email": "tim@lizardsandpumpkins.com"
-        },
-        {
-            "name": "Fabian Blechsmidt",
-            "email": "fabian@lizardsandpumpkins.com"
+            "name": "Lizards & Pumpkins UG",
+            "email": "hello@lizardsandpumpkins.com"
         }
     ],
     "require": {
-        "php": "~5.6.0|~7.0",
+        "php": "^7.0.0",
         "ext-memcached": ">=1.0 <2.2 || >=3.0.0",
-        "lizards-and-pumpkins/catalog": "^0.11.0-alpha"
+        "lizards-and-pumpkins/catalog": "^0.12.0-alpha"
     },
     "require-dev": {
         "phpunit/phpunit": "5.3.*",
@@ -28,12 +20,6 @@
     "autoload" : {
         "psr-4": { "LizardsAndPumpkins\\DataPool\\KeyValueStore\\Memcached\\": "src/" }
     },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.lizardsandpumpkins.com"
-        }
-    ],
     "scripts": {
         "test": [
             "vendor/bin/phpunit -c tests/Unit/phpunit.xml.dist",
