--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     "require": {
         "php": "^7.0.0",
         "ext-memcached": ">=1.0 <2.2 || >=3.0.0",
-        "lizards-and-pumpkins/catalog": "^0.12.0-alpha"
+        "lizards-and-pumpkins/catalog": "^0.13.0-alpha"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.3.*",
+        "phpunit/phpunit": "^5.4",
         "lizards-and-pumpkins/coding-standards": "dev-master"
     },
     "autoload" : {
