--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "~7.0.0",
         "ext-memcached": ">=1.0 <2.2 || >=3.0.0",
-        "lizards-and-pumpkins/catalog": "~0.14.0-alpha"
+        "lizards-and-pumpkins/catalog": "~0.15.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.6.2",
